[package]
name = "nanopool"
version = "1.1.0"
edition = "2021"
rust-version = "1.71"
authors = [ "fboulnois <fboulnois@users.noreply.github.com>" ]
description = "A tiny database connection pooling library for PostgreSQL"
keywords = [ "async", "database", "pool", "postgres", "sql" ]
categories = [ "database", "asynchronous", "concurrency" ]
readme = "README.md"
repository = "https://github.com/fboulnois/nanopool"
license = "MIT"

[features]
uuid = [ "tokio-postgres/with-uuid-1", "dep:uuid" ]

[dependencies]
tokio = { version = "1.48", features = [ "rt" ] }
tokio-native-tls = "0.3"
tokio-postgres = "0.7"
uuid = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = [ "macros" ] }
